# src/generated/swagger.json
@@ -16,6 +16,10 @@
 					"email": {
 						"type": "string"
 					},
+					"username": {
+						"type": "string",
+						"nullable": true
+					},
 					"role": {
 						"type": "string"
 					},
@@ -167,6 +171,10 @@
 					},
 					"email": {
 						"type": "string"
+					},
+					"username": {
+						"type": "string",
+						"nullable": true
 					},
 					"accountStatus": {
 						"type": "string"
@@ -513,17 +521,9 @@
 			},
 			"CreateUserRequest": {
 				"properties": {
-					"email": {
-						"type": "string"
-					},
-					"password": {
-						"type": "string"
-					},
-					"role": {
-						"type": "string"
-					},
 					"title": {
-						"type": "string"
+						"type": "string",
+						"nullable": true
 					},
 					"firstName": {
 						"type": "string"
@@ -534,17 +534,153 @@
 					"birthDate": {
 						"type": "string",
 						"format": "date-time"
+					},
+					"username": {
+						"type": "string"
+					},
+					"phone": {
+						"type": "string",
+						"nullable": true
+					},
+					"gender": {
+						"type": "string",
+						"nullable": true
+					},
+					"preferredCurrency": {
+						"type": "string",
+						"nullable": true
+					},
+					"preferredPaymentMethod": {
+						"type": "string",
+						"nullable": true
+					},
+					"address": {
+						"properties": {
+							"poBox": {
+								"type": "string",
+								"nullable": true
+							},
+							"addressLine2": {
+								"type": "string",
+								"nullable": true
+							},
+							"houseNumber": {
+								"type": "string",
+								"nullable": true
+							},
+							"street": {
+								"type": "string",
+								"nullable": true
+							},
+							"state": {
+								"type": "string",
+								"nullable": true
+							},
+							"city": {
+								"type": "string",
+								"nullable": true
+							},
+							"postalCode": {
+								"type": "string",
+								"nullable": true
+							},
+							"countryId": {
+								"type": "string",
+								"nullable": true
+							}
+						},
+						"type": "object"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"role": {
+						"type": "string"
 					}
 				},
 				"required": [
 					"email",
-					"password"
+					"password",
+					"role"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
 			"UpdateUserRequest": {
 				"properties": {
+					"title": {
+						"type": "string",
+						"nullable": true
+					},
+					"firstName": {
+						"type": "string"
+					},
+					"lastName": {
+						"type": "string"
+					},
+					"birthDate": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"username": {
+						"type": "string"
+					},
+					"phone": {
+						"type": "string",
+						"nullable": true
+					},
+					"gender": {
+						"type": "string",
+						"nullable": true
+					},
+					"preferredCurrency": {
+						"type": "string",
+						"nullable": true
+					},
+					"preferredPaymentMethod": {
+						"type": "string",
+						"nullable": true
+					},
+					"address": {
+						"properties": {
+							"poBox": {
+								"type": "string",
+								"nullable": true
+							},
+							"addressLine2": {
+								"type": "string",
+								"nullable": true
+							},
+							"houseNumber": {
+								"type": "string",
+								"nullable": true
+							},
+							"street": {
+								"type": "string",
+								"nullable": true
+							},
+							"state": {
+								"type": "string",
+								"nullable": true
+							},
+							"city": {
+								"type": "string",
+								"nullable": true
+							},
+							"postalCode": {
+								"type": "string",
+								"nullable": true
+							},
+							"countryId": {
+								"type": "string",
+								"nullable": true
+							}
+						},
+						"type": "object"
+					},
 					"email": {
 						"type": "string"
 					},
@@ -559,20 +695,6 @@
 					},
 					"identityVerified": {
 						"type": "boolean"
-					},
-					"title": {
-						"type": "string",
-						"nullable": true
-					},
-					"firstName": {
-						"type": "string"
-					},
-					"lastName": {
-						"type": "string"
-					},
-					"birthDate": {
-						"type": "string",
-						"format": "date-time"
 					}
 				},
 				"type": "object",
